fix(css): Absolute positioning on footer
Absolute positioning on footer causing overlap with page elements. Fixes #234

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -14,7 +14,6 @@ footer {
   background-color: $panel-footer-bg;
 
   // sticky footer
-  position: absolute;
   bottom: 0;
   width: 100%;
 
